--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -22,7 +22,7 @@ jobs:
         run: php -l index.php
 
       - name: Deploy to Azure App Service
-        uses: azure/webapp-deploy@v2
+        uses: azure/webapps-deploy@v2
         with: 
           app-name: app-so-samanta
           publish-profile: ${{ secrets.AZURE_PUBLISH_PROFILE }}
